Use failsafe
Signed-off-by: Federico Valeri <fedevaleri@gmail.com>